[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "markdown_strings"
version = "4.0.0"
description = "A Python package for generating markdown content" # TODO
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Awes Mubarak", email = "contact@awesmubarak.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-setuptools",
]

[project.urls]
Homepage = "https://github.com/awesmubarak/markdown_strings"
Repository = "https://github.com/awesmubarak/markdown_strings"
Issues = "https://github.com/awesmubarak/markdown_strings/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/markdown_strings"]

[tool.ruff]
target-version = "py38"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src/markdown_strings",
    "--cov-report=term-missing",
    "--cov-report=html",
] 

[dependency-groups]
dev = [
    "hypothesis>=6.113.0",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
]
